--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "rails7-yar",
+  "name": "rails7-yarn",
   "version": "0.1.0",
   "private": true,
-  "engines" : {
-    "node" : "^20.x"
+  "engines": {
+    "node": "^20.x"
   },
   "scripts": {
     "lint": "eslint --ext .js,.vue app/javascript",
@@ -15,7 +15,6 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@mdi/font": "~6.1.95",
-    "@rails/webpacker": "5.4.2",
     "@types/axios": "^0.14.0",
     "@vitejs/plugin-vue2": "^2.3.1",
     "axios": "^0.24.0",
@@ -30,7 +29,6 @@
     "rollbar": "^2.24.0",
     "sass": "^1.69.7",
     "sass-loader": "^10",
-    "v-currency-field": "^3.1.1",
     "vue": "^2.6.14",
     "vue-card-stack": "^1.3.1",
     "vue-country-flag": "^2.2.0",
@@ -45,13 +43,10 @@
     "vuetify-loader": "~1.5.0",
     "vuetify-multiple-draggable-dialogs": "^1.1.4",
     "vuetify-toast-snackbar-ng": "^0.7.3",
-    "vuex": "^3.6.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/test-utils": "~1.2.2",
-    "@webpack-cli/serve": "^1.5.2",
     "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
@@ -61,20 +56,21 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^7.17.0",
     "jasmine-core": "^3.9.0",
-    "karma": "^6.3.4",
+    "karma": "^6.4.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "karma-opera-launcher": "^1.0.0",
     "karma-sourcemap-loader": "^0.3.8",
     "karma-spec-reporter": "^0.0.32",
-    "karma-webpack": "^5.0.0",
+    "karma-vite": "^1.0.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^16.0.0",
+    "postcss-preset-env": "^9.3.0",
     "puppeteer": "^10.2.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.0",
     "vite-plugin-ruby": "^5.0.0",
-    "vue-cli-plugin-vuetify": "^2.4.2",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-server": "~3"
+    "vue-cli-plugin-vuetify": "^2.4.2"
   }
 }
